--- a/src/themes/theme-light/_colors.scss
+++ b/src/themes/theme-light/_colors.scss
@@ -1,16 +1,17 @@
 $primitives: (
     // primary
-    "emerald": #29C075,
+    "emerald": #188700,
+    "citrine": #FA8606,
     "aquamarine": #14B8A6,
     "amethyst": #7254F3,
     // service
     "purple": #9757D7,
 	"blue": #1F8CEB,
     "green": #45B24E,
-    "orange": #FA8606,
+    "orange": #FFA100,
     "red": #DB4C3F,
     // surface
-    "gray": #A9B1B9,
+    "gray": #ABAAA9,
 );
 
 $neutrals: (
