--- a/src/themes/theme-light/_variables.scss
+++ b/src/themes/theme-light/_variables.scss
@@ -66,6 +66,7 @@ $scaleLG: 1.25;
 $buttonHeight: 2.5rem;
 $buttonHeightSM: 2rem;
 $buttonHeightLG: 3.5rem;
+$buttonHeightXL: 4rem;
 $buttonPaddingTopBottom: 0rem;
 $buttonPaddingLeftRight: 1rem;
 $buttonPadding: $buttonPaddingTopBottom $buttonPaddingLeftRight;
@@ -577,7 +578,7 @@ $selectButtonGroupPadding: 0.25rem;
 $selectButtonBg: $surface-transparent;
 $selectButtonBorderColor: $surface-transparent;
 $selectButtonBorder: 1px solid trasparent;
-$selectButtonBorderRadius: .25rem;
+$selectButtonBorderRadius: 0.25rem;
 $selectButtonTextColor: $textSecondaryColor;
 $selectButtonIconColor: $textSecondaryColor;
 $selectButtonHoverBg: $surface-ground;
