--- a/src/themes/theme-light/_colors.scss
+++ b/src/themes/theme-light/_colors.scss
@@ -1,6 +1,6 @@
 $primitives: (
     // primary
-    "emerald": #188700,
+    "emerald": #29C075,
     "citrine": #FA8606,
     "aquamarine": #14B8A6,
     "amethyst": #7254F3,
