--- a/src/themes/theme-light/_variables.scss
+++ b/src/themes/theme-light/_variables.scss
@@ -20,7 +20,7 @@ $surface-transparent: rgba(255, 255, 255, 0.0001);
 
 // General
 $colorScheme: "light";
-$primaryColor: $primary-700;
+$primaryColor: #188700;
 $primaryColorHover: $primary-800;
 $primaryColorText: $white-100;
 $fontFamily: Roboto, Inter, Helvetica, Arial, sans-serif;
