--- a/src/themes/theme-light/theme.scss
+++ b/src/themes/theme-light/theme.scss
@@ -5,7 +5,7 @@
 @import "_primary";
 @import "_variables";
 @import "_root";
-@import "_styles-primeflex";
+//@import "_styles-primeflex";
 @import "_media-querry";
 @import "../../theme-base/_mixins";
 @import "../../theme-base/_common";
