--- a/src/themes/theme-light/theme.scss
+++ b/src/themes/theme-light/theme.scss
@@ -1,3 +1,4 @@
+@import "_styles-primeflex";
 @import "_fonts";
 @import "_colors";
 @import "_generator";
@@ -5,7 +6,6 @@
 @import "_primary";
 @import "_variables";
 @import "_root";
-//@import "_styles-primeflex";
 @import "_media-querry";
 @import "../../theme-base/_mixins";
 @import "../../theme-base/_common";
