--- a/src/themes/theme-light/_generator.scss
+++ b/src/themes/theme-light/_generator.scss
@@ -1,9 +1,10 @@
+// Генерируем css-переменные для коллекций Primary, Service, Surface в :root
 :root {
     @if variable-exists(primitives) {
         @each $name, $color in $primitives {
             @for $i from 0 through 5 {
                 @if ($i == 0) {
-                    --#{$name}-0: #{mix(#000, mix($color, #fff, 76%), 80%)};
+                    --#{$name}-0: #{mix(mix($color, #fff, 76%), #000, 80%)};
                     --#{$name}-50: #{mix($color, #fff, (5 - $i) * 19%)};
                 }
                 @else {
@@ -15,7 +16,18 @@
                 --#{$name}-#{($i + 5) * 100}: #{mix($color, #000, $i * 15%)};
             }
 
-            --#{$name}-alpha: #{mix($color, transparent, 90%)};
+            --#{$name}-alpha: #{rgba($color, 0.1)};
+        }
+    }
+}
+
+// Генерируем css-переменные для коллекций Neutrals в :root
+:root {
+    @if variable-exists(neutrals) {
+        @each $name, $color in $neutrals {
+            @for $i from 1 through 10 {
+                --#{$name}-#{$i * 10}: #{rgba($color, $i * 0.1)};
+            }
         }
     }
 }
