--- a/src/themes/theme-light/_generator.scss
+++ b/src/themes/theme-light/_generator.scss
@@ -2,21 +2,21 @@
 :root {
     @if variable-exists(primitives) {
         @each $name, $color in $primitives {
-            @for $i from 0 through 5 {
-                @if ($i == 0) {
-                    --#{$name}-0: #{mix(mix($color, #fff, 76%), #000, 80%)};
-                    --#{$name}-50: #{mix($color, #fff, 5%)};
-                }
-                @else {
-                    --#{$name}-#{$i * 100}: #{mix($color, #fff, $i * 19%)};
-                }
-            }
+            --#{$name}-0: #{mix(mix($color, #fff, 76%), #000, 80%)};
+            --#{$name}-50: #{mix($color, #fff, 5%)};
+            --#{$name}-100: #{mix($color, #fff, 24%)};
+            --#{$name}-200: #{mix($color, #fff, 43%)};
+            --#{$name}-300: #{mix($color, #fff, 62%)};
+            --#{$name}-400: #{mix($color, #fff, 81%)};
+            --#{$name}-500: #{mix($color, #fff, 100%)};
 
-            @for $i from 1 through 4 {
-                --#{$name}-#{($i + 5) * 100}: #{mix($color, #000, $i * 15%)};
-            }
+            --#{$name}-600: #{mix($color, #000, 85%)};
+            --#{$name}-700: #{mix($color, #000, 70%)};
+            --#{$name}-800: #{mix($color, #000, 55%)};
+            --#{$name}-900: #{mix($color, #000, 40%)};
 
-            --#{$name}-alpha: #{mix($color, #fff, 10%)};
+
+            --#{$name}-alpha: #{mix($color, #fff, 100%)};
         }
     }
 }
@@ -26,7 +26,7 @@
     @if variable-exists(neutrals) {
         @each $name, $color in $neutrals {
             @for $i from 1 through 10 {
-                --#{$name}-#{$i * 100}: #{mix($color, #fff, $i * 10%)};
+                --#{$name}-#{$i * 10}: #{$color};
             }
         }
     }
