disabled hover on device: button, splitbutton, selectbutton, togglebutton

--- a/src/theme-base/_mixins.scss
+++ b/src/theme-base/_mixins.scss
@@ -271,3 +271,9 @@
 @function shade($color, $percentage) {
 	@return mix(#000, $color, $percentage);
 }
+
+@mixin media-hover {
+  @media (hover: hover) and (pointer: fine) {
+    @content;
+  }
+}
