--- a/src/theme-base/components/overlay/_dialog.scss
+++ b/src/theme-base/components/overlay/_dialog.scss
@@ -19,10 +19,10 @@
         .p-dialog-header-icon {
             @include action-icon();
             margin-right: $inlineSpacing;
-            
+
             &:last-child {
                 margin-right: 0;
-            }            
+            }
         }
     }
 
@@ -49,7 +49,7 @@
         border-bottom-left-radius: $borderRadius;
 
         button {
-            margin: 0 $inlineSpacing 0 0;
+            margin: 0;
             width: auto;
         }
     }
@@ -67,12 +67,12 @@
             border-radius: 0;
         }
     }
-    
+
 
     &.p-confirm-dialog {
         .p-confirm-dialog-icon {
             font-size: $primeIconFontSize * 2;
-            
+
             &.p-icon {
                 width: $primeIconFontSize * 2;
                 height: $primeIconFontSize * 2;
