--- a/src/themes/theme-light/_variables.scss
+++ b/src/themes/theme-light/_variables.scss
@@ -155,6 +155,10 @@ $warningButtonActiveBg: $warningButtonBg;
 $warningButtonActiveTextColor: $primaryColorText;
 $warningButtonActiveBorderColor: $surface-transparent;
 
+// Button/Scondary
+$secondaryButtonBg: $black-40;
+$secondaryButtonTextColor: $white-100;
+
 // Button/Severity/Success/Basic
 $successButtonBg: $success-400;
 $successButtonTextColor: $primaryColorText;
