--- a/src/theme-base/components/input/_autocomplete.scss
+++ b/src/theme-base/components/input/_autocomplete.scss
@@ -6,7 +6,7 @@
     height: min-content;
 
     .p-autocomplete-loader {
-        right: nth($inputPadding, 2); 
+        right: nth($inputPadding, 2);
         color: $inputIconColor;
     }
 
@@ -78,11 +78,11 @@
 .p-autocomplete {
 
     .p-autocomplete-multiple-container {
-        
+
         &:not(.p-disabled):hover {
             border-color: $inputHoverBorderColor;
         }
-    
+
         &:not(.p-disabled).p-focus {
             @include focused-input();
         }
@@ -116,7 +116,7 @@
 
             input {
                 height: $chipHeight;
-                
+
                 font-family: var(--font-family);
                 font-feature-settings: var(--font-feature-settings, normal);
                 font-size: $inputTextFontSize;
@@ -151,6 +151,7 @@
             background: $inputListItemBg;
             transition: $listItemTransition;
             border-radius: $inputListItemBorderRadius;
+            white-space: normal;
 
             &:first-of-type {
                 margin-top: 0;
