--- a/src/theme-base/components/misc/_skeleton.scss
+++ b/src/theme-base/components/misc/_skeleton.scss
@@ -3,6 +3,11 @@
     border-radius: $borderRadius;
 
     &:after {
-        background: linear-gradient(90deg, rgba(255, 255, 255, 0), $skeletonAnimationBg, rgba(255, 255, 255, 0));
+      background: linear-gradient(
+        90deg,
+        rgba(255, 255, 255, 0),
+        rgba(255, 255, 255, 0.5),
+        rgba(255, 255, 255, 0)
+      );
     }
 }
