--- a/src/themes/theme-light/theme.scss
+++ b/src/themes/theme-light/theme.scss
@@ -58,6 +58,7 @@
 @import "../../theme-base/components/misc/_skeleton";
 
 //Messages
+@import "../../theme-base/components/messages/_inlinemessage";
 @import "../../theme-base/components/messages/_message";
 @import "../../theme-base/components/messages/toast";
 
